test/classes/errors/nilability-init-field-arg/init-field-arg-nonnil-owned-from-oknil-shared.good
init-field-arg-nonnil-owned-from-oknil-shared.chpl:9: In initializer:
init-field-arg-nonnil-owned-from-oknil-shared.chpl:10: error: cannot create an owned variable from a shared class instance
